--- a/myapp/src/App.css
+++ b/myapp/src/App.css
@@ -38,5 +38,9 @@ padding: 5px;
     }
     .bg-sidebar{
         background-color: #F6EDE8;
+        
+    }
+    .bg-card{
+        background-color: #F8F2EE;
     }
     
