--- a/myapp/src/App.css
+++ b/myapp/src/App.css
@@ -50,6 +50,9 @@ color:white !important;
     background-color: #8794BA !important;
     color: white !important; 
     }
+    .light-blue-hover:hover{
+        background-color: #36405e !important;
+    }
 
     .bg-purple{
       
